messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
  labels:
    app: django-messaging
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0   # Ensures no downtime
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django-messaging
        version: blue
    spec:
      containers:
        - name: django-messaging-container
          image: Rasheedbello45/django-messaging:2.0  # Updated version
          ports:
            - containerPort: 8000
