messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
        - name: django-messaging-container
          image: Rasheedbello45/django-messaging:green
          ports:
            - containerPort: 8000
