messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-deployment
  labels:
    app: django-messaging
spec:
  replicas: 2  # Run 2 pods for redundancy
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django-messaging-container
          image: Rasheedbello45/django-messaging:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP  # Internal access only
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000       # Service port
      targetPort: 8000 # Container port
